Interface for computing energies and forces

--- a/src/pypolymlp/cxx/CMakeLists.txt
+++ b/src/pypolymlp/cxx/CMakeLists.txt
@@ -10,7 +10,8 @@ set(SRC_FILES
     src/compute/neighbor_half.cpp
     src/compute/py_model.cpp
     src/compute/py_properties.cpp
-    src/compute/py_properties_efficient.cpp
+    #src/compute/py_properties_efficient.cpp
+    src/compute/py_properties_fast.cpp
     src/compute/py_additive_model.cpp
     src/compute/py_features_attr.cpp
     src/compute/polymlp_eval.cpp
