--- a/src/pypolymlp/cxx/CMakeLists.txt
+++ b/src/pypolymlp/cxx/CMakeLists.txt
@@ -8,9 +8,9 @@ set(SRC_FILES
     src/compute/model_properties.cpp
     src/compute/neighbor.cpp
     src/compute/neighbor_half.cpp
+    src/compute/neighbor_cell.cpp
     src/compute/py_model.cpp
     src/compute/py_properties.cpp
-    #src/compute/py_properties_efficient.cpp
     src/compute/py_properties_fast.cpp
     src/compute/py_additive_model.cpp
     src/compute/py_features_attr.cpp
