--- a/src/pypolymlp/cxx/CMakeLists.txt
+++ b/src/pypolymlp/cxx/CMakeLists.txt
@@ -28,7 +28,19 @@ set(SRC_FILES
     src/polymlp/polymlp_features.cpp
     src/polymlp/polymlp_potential.cpp
     src/polymlp/polymlp_gtinv_data.cpp
+    src/polymlp/polymlp_gtinv_data_order1.cpp
+    src/polymlp/polymlp_gtinv_data_order2.cpp
+    src/polymlp/polymlp_gtinv_data_order3.cpp
+    src/polymlp/polymlp_gtinv_data_order4.cpp
+    src/polymlp/polymlp_gtinv_data_order5.cpp
+    src/polymlp/polymlp_gtinv_data_order6.cpp
     src/polymlp/polymlp_gtinv_data_ver2.cpp
+    src/polymlp/polymlp_gtinv_data_ver2_order1.cpp
+    src/polymlp/polymlp_gtinv_data_ver2_order2.cpp
+    src/polymlp/polymlp_gtinv_data_ver2_order3.cpp
+    src/polymlp/polymlp_gtinv_data_ver2_order4.cpp
+    src/polymlp/polymlp_gtinv_data_ver2_order5.cpp
+    src/polymlp/polymlp_gtinv_data_ver2_order6.cpp
 )
 
 #SET(CMAKE_INTERPROCEDURAL_OPTIMIZATION FALSE)
