--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
   - id: flake8
     args:
     - "--max-line-length=88"
-    - "--ignore=E203,W503,E501,E722,W605,E741"
+    - "--ignore=E203,W503,E501,W605,E712,E741,E722"
     - "--exclude=src/pypolymlp/*/deprecated/*,src/pypolymlp/*/obsolete/*,src/pypolymlp/mlp_gen/*"
     #- "--ignore=E203,W503,E501"
 
