--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,15 @@
 [build-system]
-requires = ["setuptools"]
+requires = [
+    "setuptools",
+    "scikit-build",
+    "wheel",
+    "cmake",
+    "pybind11",
+    "eigen",
+    "numpy",
+    "scipy",
+    "pyyaml",
+]
 
 [tool.flake8]
 max-line-length = 88
