PyPI and conda-forge packages are developing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires = [
     "ninja",
     "wheel",
     "cmake",
+    "make",
     "pybind11",
     "pybind11-global",
     "eigen",
@@ -23,19 +24,3 @@ line-length = 88
 
 [tool.isort]
 profile = "black"
-
-
-# [project]
-# name = "pypolymlp"
-# version = "0.1.2"
-# requires-python = ">= 3.9"
-# authors = [
-#   {name = "Atsuto Seko", email = "seko@cms.mtl.kyoto-u.ac.jp"},
-# ]
-# maintainers = [
-#   {name = "Atsuto Seko", email = "seko@cms.mtl.kyoto-u.ac.jp"},
-# ]
-# description = "This is the pypolymlp module."
-# readme = "README.md"
-# license = {file = "LICENSE"}
-#
