--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pypolymlp" %}
-{% set version = "0.2.5" %}
+{% set version = "0.2.8" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/pypolymlp-{{ version }}.tar.gz
-  sha256: bf50de8168b1bb687f9c3edcb47ffdf46a7f458a980eefd1c7f0fb6a0763b51f
+  sha256: 6d4f8a93f5cd2f479b49b76e16575011590b95c010fb396afee6904b0ad77731
 
 build:
   skip: true  # [py<39 or win]
@@ -22,44 +22,36 @@ build:
 requirements:
   build:
     - {{ compiler('cxx') }}
-    - {{ compiler('c') }}
     - {{ stdlib('c') }}
+    - ninja
+    - wheel
     - cmake
     - make
-    - llvm-openmp  # [osx]
+    - pybind11
+    - pybind11-global
+    - eigen
     - libgomp  # [linux]
+    - llvm-openmp  # [osx]
   host:
     - python
     - setuptools >=61.0
     - scikit-build
-    - wheel
-    - cmake
-    - pybind11
-    - pybind11-global
-    - eigen
     - pip
-    - llvm-openmp  # [osx]
-    - libgomp  # [linux]
   run:
     - python
-    - pybind11
-    - pybind11-global
-    - eigen
     - scipy
     - pyyaml
     - {{ pin_compatible('numpy') }}
+    - setuptools >=61.0
 
 test:
   imports:
     - pypolymlp
   commands:
-    - pip check
     - pypolymlp --help
     - pypolymlp-calc --help
     - pypolymlp-utils --help
     - pypolymlp-structure --help
-  requires:
-    - pip
 
 about:
   home: https://github.com/sekocha/pypolymlp
