--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,68 @@
 [build-system]
 requires = [
-    "setuptools >= 61.0",
-    "scikit-build",
-    "ninja",
-    "wheel",
-    "cmake",
-    "make",
+    "scikit-build-core",
+    "setuptools_scm[toml]>=6.0",
     "pybind11",
     "pybind11-global",
     "eigen",
-    "numpy",
-    "scipy",
-    "pyyaml",
 ]
-build-backend = "setuptools.build_meta"
+build-backend = "scikit_build_core.build"
+
+[project]
+name = "pypolymlp"
+dynamic = ["version"]
+readme = { file = "README.md", content-type = "text/markdown" }
+description = "This is the pypolymlp module."
+authors = [{ name = "Atsuto Seko", email = "seko@cms.mtl.kyoto-u.ac.jp" }]
+requires-python = ">=3.9"
+dependencies = [
+    "numpy>=1.17.0",
+    "scipy",
+    "PyYAML>=5.3",
+    "setuptools >= 61.0",
+]
+license = { file = "LICENSE" }
+
+[project.optional-dependencies]
+symfc = ["symfc"]
+phonopy = ["phonopy"]
+phono3py = ["phono3py"]
+spglib = ["spglib"]
+tools = ["symfc", "phonopy", "phono3py", "spglib"]
+
+[project.urls]
+Homepage = "https://github.com/sekocha/pypolymlp"
+Repository = "https://github.com/sekocha/pypolymlp"
+
+[project.scripts]
+pypolymlp = "pypolymlp.api.run_polymlp:run"
+pypolymlp-calc = "pypolymlp.api.run_polymlp_calc:run"
+pypolymlp-utils = "pypolymlp.api.run_polymlp_utils:run"
+pypolymlp-structure = "pypolymlp.api.run_polymlp_str:run"
+
+[tool.scikit-build]
+cmake.verbose = true
+# logging.level = "INFO"
+logging.level = "DEBUG"
+wheel.packages = ["<package>", "src/<package>", "pypolymlp.cxx.lib"]
+cmake.source-dir = "./src/pypolymlp/cxx"
+metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
+sdist.include = [
+    "LICENCE",
+    "README.md",
+    "docs",
+    "examples",
+    "pyproject.toml",
+    "src",
+    "setup.cfg",
+    "version.py",
+]
+
+# [tool.setuptools]
+# package-dir = {"" = "src"}
+
+[tool.setuptools_scm]
+write_to = "version.py"
 
 [tool.flake8]
 max-line-length = 88
