--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dynamic = ["version"]
 readme = { file = "README.md", content-type = "text/markdown" }
 description = "This is the pypolymlp module."
 authors = [{ name = "Atsuto Seko", email = "seko@cms.mtl.kyoto-u.ac.jp" }]
+maintainers = [{ name = "Atsuto Seko", email = "seko@cms.mtl.kyoto-u.ac.jp" }]
 requires-python = ">=3.9"
 dependencies = [
     "numpy>=1.17.0",
@@ -42,9 +43,8 @@ pypolymlp-structure = "pypolymlp.api.run_polymlp_str:run"
 
 [tool.scikit-build]
 cmake.verbose = true
-# logging.level = "INFO"
-logging.level = "DEBUG"
-wheel.packages = ["<package>", "src/<package>", "pypolymlp.cxx.lib"]
+logging.level = "INFO"
+# wheel.packages = ["<package>", "src/<package>", "pypolymlp.cxx.lib"]
 cmake.source-dir = "./src/pypolymlp/cxx"
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 sdist.include = [
@@ -54,12 +54,8 @@ sdist.include = [
     "examples",
     "pyproject.toml",
     "src",
-    "setup.cfg",
     "version.py",
 ]
-
-# [tool.setuptools]
-# package-dir = {"" = "src"}
 
 [tool.setuptools_scm]
 write_to = "version.py"
