--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,9 +43,7 @@ pypolymlp-structure = "pypolymlp.api.run_polymlp_str:run"
 
 [tool.scikit-build]
 cmake.verbose = true
-logging.level = "DEBUG"
-# logging.level = "INFO"
-# wheel.packages = ["<package>", "src/<package>", "pypolymlp.cxx.lib"]
+logging.level = "INFO"
 cmake.source-dir = "./src/pypolymlp/cxx"
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 
