--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ authors = [{ name = "Atsuto Seko", email = "seko@cms.mtl.kyoto-u.ac.jp" }]
 maintainers = [{ name = "Atsuto Seko", email = "seko@cms.mtl.kyoto-u.ac.jp" }]
 requires-python = ">=3.9"
 dependencies = [
-    "numpy>=1.17.0",
+    "numpy >= 1.17.0 < 2.0.0",
     "scipy",
-    "PyYAML>=5.3",
+    "PyYAML >= 5.3",
     "setuptools >= 61.0",
 ]
 license = { file = "LICENSE" }
