--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ sdist.exclude = [
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 
 [tool.setuptools_scm]
-write_to = "version.py"
+write_to = "_version.py"
 
 [tool.flake8]
 max-line-length = 88
