--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,8 @@ metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 
 [tool.setuptools_scm]
 write_to = "_version.py"
+version_scheme = "post-release"
+local_scheme = "no-local-version"
 
 [tool.flake8]
 max-line-length = 88
