--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pypolymlp" %}
-{% set version = "0.2.8" %}
+{% set version = "0.3.7" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/pypolymlp-{{ version }}.tar.gz
-  sha256: 6d4f8a93f5cd2f479b49b76e16575011590b95c010fb396afee6904b0ad77731
+  sha256: 4f882c831f5b616ec1db6b19c26dcd4c26e932dcc685d2562d08ae58662dded3
 
 build:
   skip: true  # [py<39 or win]
@@ -35,7 +35,8 @@ requirements:
   host:
     - python
     - setuptools >=61.0
-    - scikit-build
+    - scikit-build-core
+    - setuptools_scm
     - pip
   run:
     - python
@@ -52,6 +53,7 @@ test:
     - pypolymlp-calc --help
     - pypolymlp-utils --help
     - pypolymlp-structure --help
+    - pypolymlp-sscha --help
 
 about:
   home: https://github.com/sekocha/pypolymlp
