--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pypolymlp" %}
-{% set version = "0.3.7" %}
+{% set version = "0.3.11" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/pypolymlp-{{ version }}.tar.gz
-  sha256: 4f882c831f5b616ec1db6b19c26dcd4c26e932dcc685d2562d08ae58662dded3
+  sha256: 50ee93ededd5d1554e9f84f5e316777e1dc52e3de6573371754bf2d9d65560f2
 
 build:
   skip: true  # [py<39 or win]
@@ -24,36 +24,40 @@ requirements:
     - {{ compiler('cxx') }}
     - {{ stdlib('c') }}
     - ninja
-    - wheel
     - cmake
     - make
-    - pybind11
-    - pybind11-global
     - eigen
     - libgomp  # [linux]
     - llvm-openmp  # [osx]
   host:
     - python
+    - wheel
     - setuptools >=61.0
     - scikit-build-core
     - setuptools_scm
     - pip
+    - pybind11
+    - pybind11-global
+    - libgomp  # [linux]
+    - llvm-openmp  # [osx]
   run:
     - python
+    - numpy !=2.0.*
     - scipy
     - pyyaml
-    - {{ pin_compatible('numpy') }}
     - setuptools >=61.0
 
 test:
   imports:
     - pypolymlp
+  requires:
+    - pip
   commands:
     - pypolymlp --help
     - pypolymlp-calc --help
     - pypolymlp-utils --help
     - pypolymlp-structure --help
-    - pypolymlp-sscha --help
+    - pip check
 
 about:
   home: https://github.com/sekocha/pypolymlp
