--- a/src/pypolymlp/cxx/CMakeLists.txt
+++ b/src/pypolymlp/cxx/CMakeLists.txt
@@ -50,6 +50,7 @@ set(SRC_FILES
     src/compute/neighbor.cpp
     src/compute/neighbor_half.cpp
     src/compute/neighbor_cell.cpp
+    src/compute/py_params.cpp
     src/compute/py_model.cpp
     src/compute/py_properties_fast.cpp
     src/compute/py_additive_model.cpp
