--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ pypolymlp-utils = "pypolymlp.api.run_polymlp_utils:run"
 pypolymlp-structure = "pypolymlp.api.run_polymlp_str:run"
 pypolymlp-sscha = "pypolymlp.api.run_polymlp_sscha:run"
 pypolymlp-sscha-structure = "pypolymlp.api.run_polymlp_sscha_str:run"
+pypolymlp-sscha-post = "pypolymlp.api.run_polymlp_sscha_post:run"
 
 [tool.scikit-build]
 cmake.verbose = true
