--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ sdist.exclude = [
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 
 [tool.setuptools_scm]
-write_to = "_version.py"
+write_to = "./src/pypolymlp/_version.py"
 version_scheme = "post-release"
 local_scheme = "no-local-version"
 
