--- a/examples/utils/mlp_opt/Ag-Au/polymlp-00002/polymlp_cost.yaml
+++ b/examples/utils/mlp_opt/Ag-Au/polymlp-00002/polymlp_cost.yaml
@@ -1,6 +1,7 @@
+system: Ag-Au
 units:
   time: msec/atom/step
 
 costs:
-  single_core: 0.029117288067936897
-  openmp:      0.002331831492483616
+  single_core: 0.02865898422896862
+  openmp:      0.0023402320221066475
