--- a/examples/utils/mlp_opt/Ag-Au/polymlp-00004/polymlp_cost.yaml
+++ b/examples/utils/mlp_opt/Ag-Au/polymlp-00004/polymlp_cost.yaml
@@ -1,6 +1,7 @@
+system: Ag-Au
 units:
   time: msec/atom/step
 
 costs:
-  single_core: 0.03793258219957352
-  openmp:      0.0026077404618263245
+  single_core: 0.03401567228138447
+  openmp:      0.0025500962510704994
