--- a/examples/utils/mlp_opt/Ag-Au/polymlp-00005/polymlp_cost.yaml
+++ b/examples/utils/mlp_opt/Ag-Au/polymlp-00005/polymlp_cost.yaml
@@ -1,6 +1,7 @@
+system: Ag-Au
 units:
   time: msec/atom/step
 
 costs:
-  single_core: 0.03296337090432644
-  openmp:      0.0023369817063212395
+  single_core: 0.03292672336101532
+  openmp:      0.0022577308118343353
