--- a/examples/utils/mlp_opt/Ag-Au/polymlp-00006/polymlp_cost.yaml
+++ b/examples/utils/mlp_opt/Ag-Au/polymlp-00006/polymlp_cost.yaml
@@ -1,6 +1,7 @@
+system: Ag-Au
 units:
   time: msec/atom/step
 
 costs:
-  single_core: 0.049869948998093605
-  openmp:      0.003030030056834221
+  single_core: 0.04680594429373741
+  openmp:      0.0030570663511753082
