--- a/examples/utils/mlp_opt/Ag-Au/polymlp-00008/polymlp_cost.yaml
+++ b/examples/utils/mlp_opt/Ag-Au/polymlp-00008/polymlp_cost.yaml
@@ -1,6 +1,7 @@
+system: Ag-Au
 units:
   time: msec/atom/step
 
 costs:
-  single_core: 0.046253856271505356
-  openmp:      0.0036589987576007843
+  single_core: 0.04380405880510807
+  openmp:      0.0035530375316739082
