Implement openmp for single st. polymlp_eval

--- a/src/pypolymlp/cxx/CMakeLists.txt
+++ b/src/pypolymlp/cxx/CMakeLists.txt
@@ -57,6 +57,7 @@ set(SRC_FILES
     src/compute/py_additive_model.cpp
     src/compute/py_features_attr.cpp
     src/compute/polymlp_eval.cpp
+    src/compute/polymlp_eval_openmp.cpp
     src/compute/features.cpp
     src/compute/local_fast.cpp
     src/compute/model_fast.cpp
