--- a/src/pypolymlp/cxx/CMakeLists.txt
+++ b/src/pypolymlp/cxx/CMakeLists.txt
@@ -70,22 +70,15 @@ set(SRC_FILES
     src/compute/model.cpp
     src/python/pybind11_mlp.cpp
     src/polymlp/polymlp_gtinv_data.cpp
-    src/polymlp/polymlp_gtinv_data_order1.cpp
-    src/polymlp/polymlp_gtinv_data_order2.cpp
-    src/polymlp/polymlp_gtinv_data_order3.cpp
-    src/polymlp/polymlp_gtinv_data_order4.cpp
-    src/polymlp/polymlp_gtinv_data_order5.cpp
-    src/polymlp/polymlp_gtinv_data_order6.cpp
-    src/polymlp/polymlp_gtinv_data_ver2.cpp
-    src/polymlp/polymlp_gtinv_data_ver2_order1.cpp
-    src/polymlp/polymlp_gtinv_data_ver2_order2.cpp
-    src/polymlp/polymlp_gtinv_data_ver2_order3.cpp
-    src/polymlp/polymlp_gtinv_data_ver2_order4.cpp
-    src/polymlp/polymlp_gtinv_data_ver2_order5.cpp
-    src/polymlp/polymlp_gtinv_data_ver2_order6.cpp
+    # src/polymlp/polymlp_gtinv_data_ver2.cpp
+    # src/polymlp/polymlp_gtinv_data_ver2_order1.cpp
+    # src/polymlp/polymlp_gtinv_data_ver2_order2.cpp
+    # src/polymlp/polymlp_gtinv_data_ver2_order3.cpp
+    # src/polymlp/polymlp_gtinv_data_ver2_order4.cpp
+    # src/polymlp/polymlp_gtinv_data_ver2_order5.cpp
+    # src/polymlp/polymlp_gtinv_data_ver2_order6.cpp
 )
 
-# add_library(libmlpcpp SHARED ${SRC_FILES})
 pybind11_add_module(libmlpcpp ${SRC_FILES})
 
 target_include_directories(libmlpcpp PRIVATE ${CMAKE_SOURCE_DIR}/src)
@@ -111,8 +104,3 @@ install(
     COMPONENT python
     LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib
 )
-# install(
-#     TARGETS libmlpcpp
-#     COMPONENT python
-#     LIBRARY DESTINATION .
-# )
